Bug 162659 - Can't install FreeBSD-amd64-9.0-RC2 on disk less than 6Go (/mnt: out of inodes)
Summary: Can't install FreeBSD-amd64-9.0-RC2 on disk less than 6Go (/mnt: out of inodes)
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: Unspecified
Hardware: Any Any
: Normal Affects Only Me
Assignee: Kirk McKusick
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-18 10:30 UTC by olivier
Modified: 2012-01-13 07:32 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description olivier 2011-11-18 10:30:13 UTC
Installing FreeBSD-9.0-RC2-amd64-dvd1.iso on a VM with an hard drive less than 6 Go failed.
Tested and reproductible on a VM configured with a 4Go or 5Go hard drive as example.

During install process I choose these distribution sets: ports and src only.
And I'm using guided partitioning / Entire Disk / All Auto

The installer failed during archive extraction of ports.txz (at about 88% progress of this file extraction) with this kind of message:

Error while extracting ports.txz:
Can't create
'usr/ports/XX/YY'

And on the background there is this message:
..on /mnt: out of inodes

Because these distribution sets (ports and src only) consume only 2.7Go of disk space, it should be possible to install it on a 3Go hard drive.

Fix: 

Using a minimum of 6Go hard drive fix the problem.
How-To-Repeat: Installing distribution set ports and src on a VM with less than 6Go hard drive.
Comment 1 olivier 2011-12-13 10:23:32 UTC
Hi,

I've did some tests: The number of inode after a fresh install of
9.0-RC2 is half the number of inode after the fresh install of a 8.2.
I've install a 6Gio hard drive, MBR, no swap partition and all in /
(under VirtualBox).

After a fresh install of 8.2 (=ABuser=BB insall):

[root@vm]~#df -i
Filesystem  1K-blocks    Used   Avail Capacity iused ifree %iused  Mounted =
on
/dev/ad0s1a   6090038 451176 5151660    8%  12509    788257  1%   /
devfs               1       1       0   100%       0     0  100%   /dev

number of inode =3D iused + ifree =3D 800766


After a fresh install of 9.0: (base,kernel,games,lib32)

[root@vm]~#df -i
Filesystem  1K-blocks    Used   Avail Capacity iused ifree %iused  Mounted =
on
/dev/ada0s1a   6184164 684012 5005420    12%  13409    412829  3%   /
devfs               1       1       0   100%       0     0  100%   /dev

number of inode =3D iused + ifree =3D 426238

This is a big problem: It prevent to extract or update the port tree=85

Thanks,

Olivier
Comment 2 Kirk McKusick freebsd_committer freebsd_triage 2011-12-21 23:13:13 UTC
State Changed
From-To: open->patched

Suggested patch has been applied. 


Comment 3 Kirk McKusick freebsd_committer freebsd_triage 2011-12-21 23:13:13 UTC
Responsible Changed
From-To: freebsd-bugs->mckusick

I will take responsibility.
Comment 4 dfilter service freebsd_committer freebsd_triage 2012-01-13 07:19:17 UTC
Author: mckusick
Date: Fri Jan 13 07:19:02 2012
New Revision: 230049
URL: http://svn.freebsd.org/changeset/base/230049

Log:
  MFC: 228794
  
  Reduce NFPI by half to keep the default number of inodes the same with
  the now default 32K/4K filesystem the same as the number of inodes in
  the previously default 16K/2K filesystem.
  
  PR:          bin/162659
  Reported by: Olivier Cochard-Labbe <olivier@cochard.me>

Modified:
  stable/9/sbin/newfs/newfs.h
Directory Properties:
  stable/9/sbin/newfs/   (props changed)

Modified: stable/9/sbin/newfs/newfs.h
==============================================================================
--- stable/9/sbin/newfs/newfs.h	Fri Jan 13 07:10:52 2012	(r230048)
+++ stable/9/sbin/newfs/newfs.h	Fri Jan 13 07:19:02 2012	(r230049)
@@ -70,7 +70,7 @@
  * We allocate one inode slot per NFPI fragments, expecting this
  * to be far more than we will ever need.
  */
-#define	NFPI		4
+#define	NFPI		2
 
 /*
  * variables set up by front end.
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"
Comment 5 Kirk McKusick freebsd_committer freebsd_triage 2012-01-13 07:30:23 UTC
State Changed
From-To: patched->closed

The fix has been verified in head. 
The fix has been MFC'ed to 9. 
The fix is not applicable to release 8 or earlier.