MFC: 228794

Reduce NFPI by half to keep the default number of inodes the same with
the now default 32K/4K filesystem the same as the number of inodes in
the previously default 16K/2K filesystem.

PR:          bin/162659
Reported by: Olivier Cochard-Labbe <olivier@cochard.me>

Former-commit-id: a7360de673b1399257c39eda04bdd20bed5f5add