sbin/newfs/newfs.h
@@ -64,7 +64,7 @@ begin_define
 define|#
 directive|define
 name|NFPI
-value|4
+value|2
 end_define
 
 begin_comment
